# random

./: README.md  hello.py  pyproject.toml  result  test.c
.github/workflows/: README.md  branch_sweeper.yaml  create_branch.yaml  dependency_setup.yaml  dev_shell-nix.yaml  hello_world.yaml  issue_assigner.yaml
poetry_py/poetrytest/: pyproject.toml
shell_scripts/: arguments_provided.sh  check_argument.sh  conditional_expressions.sh  notes.md
threads_py/: deleter.py
