[tool.poetry]
name = "random"
version = "0.1.0"
description = "env for random python stuff"
authors = ["BBBmau <alvarez.mauriciotm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
art = "^6.1"
emoji = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
